# forge

forge/: .env.production  1-STRIPE_PRODUCTION_SETUP.md  2-OVERAGE_CHARGING_SYSTEM.js  3-ADMIN_REVENUE_DASHBOARD.tsx  4-ENTERPRISE_SALES_PLAYBOOK.md  5-BILLING_ROUTES_MODULE.rs  API_DOCUMENTATION.md  AWS_COMING_SOON_DEPLOY.md  BACKEND_API_EXPANSION.md  BRANCH-PROTECTION-RULES.md  BRANCH-PROTECTION-SUMMARY.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_PROGRESS.html  Dockerfile  FORGE-PROJECT-TREE.md  (+173 more)
forge/forge-core/: .env  .env.test  Cargo.toml  INTEGRATION_TEST_COMPLETION.md  README.md  ROUTER_MODULE_SUMMARY.md  TESTING.md  docker-compose.test.yml  setup-test-db.bat  setup-test-db.sh
forge/forge-core-temp/forge-memory/: Cargo.toml
forge/forge-core-temp/forge-memory/src/: lib.rs  main.rs
forge/forge-core/migrations/: 001_create_tasks_table.sql  002_create_execution_history_table.sql  003_create_tool_metrics_table.sql  004_create_agent_memory_tables.sql  005_create_memory_triggers.sql  006_create_workflow_tables.sql  007_create_queue_statistics_views.sql
forge/forge-core/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  router.rs  worker.rs
forge/forge-core/src/agents/: builtin.rs  coordinator.rs  handlers.rs  mod.rs  service.rs  tool_handlers.rs  tool_interface.rs  tool_registry.rs  tools.rs  types.rs
forge/forge-core/src/executor/: coordinator.rs  db.rs  handlers.rs  mod.rs  queue.rs  service.rs
forge/forge-core/src/llm_router/: classifier.rs  decorator.rs  fallback.rs  mod.rs  observability.rs  routing_table.rs
forge/forge-core/src/tests/: mod.rs
forge/forge-core/src/tests/integration/: concurrent_operations.rs  concurrent_operations_sqlx.rs  database_interactions.rs  database_interactions_sqlx.rs  fixtures.rs  handlers_integration.rs  handlers_integration_sqlx.rs  mod.rs
forge/forge-core/src/tests/unit/: coordinator_tests.rs  error.rs  executor_handlers_unit.rs  mod.rs  models.rs  worker_tests.rs
forge/forge-core/tests/: EXECUTOR_TESTS_README.md  executor_integration_tests.rs  integration_executor_handlers.rs  integration_tools.rs  memory_system_integration_tests.rs
(+339 files in other folders)
